@@ -21,4 +21,5 @@
 bool utilWritePNGFile(char *, int, int, u8 *);
 bool utilWriteBMPFile(char *, int, int, u8 *);
 void utilApplyIPS(char *ips, u8 *rom);
+void utilWriteBMP(char *, int, int, u8 *);
 #endif
